2013-11-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_groups.php
	  include/functions_users.php: Fix combo groups.

2013-11-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/reporting/reporting_builder.php: Fix filter groups
	of reports.

2013-11-18  Sergio Martin <sergio.martin@artica.es>

	* images/status_sets/default/server_ok.png: Change the
	server OK status image to be the same style than 
	server down. Incident #392

2013-11-18  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php: Fixed status
	of visual map items when have a fired alert for
	incident #391

2013-11-15  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ar.mo
	  include/languages/ar.po
 	  include/languages/cs.mo
	  include/languages/cs.po
	  include/languages/de.mo
	  include/languages/de.po
	  include/languages/el.mo
	  include/languages/el.po
	  include/languages/en_GB.mo
	  include/languages/en_GB.po
	  include/languages/es.mo
	  include/languages/es.po
	  include/languages/fr.po
	  include/languages/fr.mo
	  include/languages/it.po
	  include/languages/it.mo
	  include/languages/ja.po
	  include/languages/ja.mo
	  include/languages/nl.po
	  include/languages/nl.mo
	  include/languages/pl.po
	  include/languages/pl.mo
	  include/languages/pt.po
	  include/languages/pt.mo
	  include/languages/pt_BR.po
	  include/languages/pt_BR.mo
	  include/languages/ru.po
	  include/languages/ru.mo
	  include/languages/sk.po
	  include/languages/sk.mo
	  include/languages/tr.po
	  include/languages/tr.mo
	  include/languages/zh_CN.po
	  include/languages/zh_CN.mo: Updated translations.

	* include/languages/ca.mo
	  include/languages/ca.po: Added language.

	* include/languages/zh_TW.po
	  include/languages/zh_TW.mo: Deleted language.

	* pandoradb_data.oracle.sql
	  pandoradb_data.postgreSQL.sql
	  pandoradb_data.sql
	  extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	  extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql